polling-devops-k8s/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: polling
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: 893493035367.dkr.ecr.us-east-1.amazonaws.com/polling-app-server
        imagePullPolicy: Always 
        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "250m"       
            memory: "512Mi"
          limits:
            cpu: "500m"       
            memory: "1Gi"  

        readinessProbe:
          httpGet:
            path: /api/polls
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 5
        
        livenessProbe:
          httpGet:
            path: /api/polls
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 10
          failureThreshold: 3
